Rest of the endpoints using dry structs (#78)
This adds dry structs to post endpoints and fixes some issues that were missed.
